--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@nuxtjs/dotenv": "^1.4.1",
     "@nuxtjs/laravel-echo": "^1.1.0",
     "@sweetalert2/theme-material-ui": "^4.0.1",
+    "chart.js": "^2.9.4",
     "core-js": "^3.7.0",
     "date-fns": "^2.16.1",
     "nuxt": "^2.14.6",
@@ -26,6 +27,7 @@
     "sweetalert2": "^9.17.1",
     "v-currency-field": "^3.0.11",
     "vue-api-query": "^1.9.1",
+    "vue-chartjs": "^3.5.1",
     "vue-pdf": "^4.2.0",
     "vue-sweetalert2": "^3.0.6",
     "vuelidate": "^0.7.6",
